# AI-Usage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TASKS.md  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  output.rs
cli/src/commands/: config_cmd.rs  history.rs  refresh.rs  status.rs
docs/: api-integration.md  architecture.md  cli.md  data-models.md  developer-api.md  user-guide.md
scripts/: generate-icons.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  models.rs
src-tauri/src/api/: handlers.rs  mod.rs  routes.rs
src-tauri/src/commands/: accounts.rs  history.rs  mod.rs  scheduler.rs  usage.rs
src-tauri/src/providers/: claude.rs  mod.rs
src-tauri/src/services/: credentials.rs  history.rs  mod.rs  notifications.rs  scheduler.rs
src/components/: AccountManager.tsx  Analytics.tsx  Dashboard.tsx  Onboarding.tsx  ProgressRing.test.tsx  ProgressRing.tsx  Settings.tsx  UpdateChecker.tsx  UsageCard.test.tsx  UsageCard.tsx
src/hooks/: useGlobalShortcut.ts  useUsage.ts
src/lib/: store.test.ts  store.ts  tauri.test.ts  tauri.ts  tray.ts  types.ts  utils.test.ts  utils.ts
src/test/: setup.ts
