[package]
name = "ai-pulse"
version = "0.18.0"
description = "Monitor AI service usage quotas for Claude"
authors = ["Griffin Thomas"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-opener = "2"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Local API server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
